@@ -5,7 +5,8 @@
   "compatibilityLevel": "JAVA_8",
   "mixins": [
     "MixinGuiMainMenu",
-    "MixinMinecraft"
+    "MixinMinecraft",
+    "MixinGuiScreen"
   ],
   "minVersion": "0.6"
 }
